# Algorithms-Project

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  clustering_common.hpp  divide_and_conquer.cpp  iterative_improvement.cpp  iterative_improvement.hpp  report.md  task3.cpp  tasks_assignment.md
Task01/: main.cpp
Task02/: task2.cpp
Task03/: task3.cpp
Task04/: AStar.cpp  BFS.cpp  iterative_improvement.cpp
Task05/: main.cpp  target_search_D&C.cpp
Task06/: Dynamic Programming  Task 06  Task 6 final.docx  Task 6.docx
Task07/: DP_table.md  Job.hpp  globals.cpp  gui_main.cpp  job_processing.cpp  job_processing_BF.cpp  job_processing_D&C.cpp  job_processing_DP.cpp
Task08/: Main.cpp  MinCutSolver.cpp  MinCutSolver.h
Task09/: README.md  brute_force.cpp  brute_force.hpp  clustering_common.hpp  divide_and_conquer.cpp  divide_and_conquer.hpp  iterative_improvement.cpp  iterative_improvement.hpp  main.cpp  point.hpp
Task09/Task07/: gui_main.cpp
Task09/Task08/: Graph.cpp  Graph.h
Task09/Task09/: brute_force.cpp  brute_force.hpp  divide_and_conquer.cpp  divide_and_conquer.hpp  iterative_improvement.cpp  iterative_improvement.hpp  main.cpp
Task10/: DP_T10.cpp  DivideAndConquer_T10.cpp  brute_force_T10.cpp  greedy.cpp
